--- a/pom.xml
+++ b/pom.xml
@@ -13,19 +13,11 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>1.8</java.version>
+		<java.version>1.7</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<spring.boot.version>1.3.0.RELEASE</spring.boot.version>
 	</properties>
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>jfrog-oss</id>
-			<name>JFrog OSS snapshot repository</name>
-			<url>http://oss.jfrog.org/artifactory/oss-snapshot-local</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 
 	<dependencies>
@@ -33,6 +25,18 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 			<version>${spring.boot.version}</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.10</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>com.jayway.jsonpath</groupId>
+		    <artifactId>json-path</artifactId>
+		    <version>2.3.0</version>
 		</dependency>
 
 		<dependency>
@@ -81,59 +85,7 @@
 					</environmentVariables>
 				</configuration>
 			</plugin>
-		</plugins>
-
+    	</plugins>
 	</build>
-
-	<profiles>
-		<profile>
-			<id>ojo-build-info</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jfrog.buildinfo</groupId>
-						<artifactId>artifactory-maven-plugin</artifactId>
-						<version>2.4.0</version>
-						<executions>
-							<execution>
-								<id>build-info</id>
-								<goals>
-									<goal>publish</goal>
-								</goals>
-								<configuration>
-									<deployProperties>
-										<githubRepo>${env.TRAVIS_REPO_SLUG}</githubRepo>
-									</deployProperties>
-									<artifactory>
-										<envVarsIncludePatterns>*TRAVIS*</envVarsIncludePatterns>
-										<includeEnvVars>true</includeEnvVars>
-									</artifactory>
-									<publisher>
-										<contextUrl>https://oss.jfrog.org</contextUrl>
-										<username>${env.BINTRAY_USER}</username>
-										<password>${env.BINTRAY_PASSWORD}</password>
-										<repoKey>oss-release-local</repoKey>
-										<snapshotRepoKey>oss-snapshot-local</snapshotRepoKey>
-									</publisher>
-									<buildInfo>
-										<buildName>${project.artifactId}</buildName>
-										<buildNumber>{{TRAVIS_BUILD_NUMBER|CI_BUILD_NUMBER|BUILD_NUMBER}}
-										</buildNumber>
-										<buildUrl>{{CI_BUILD_URL|BUILD_URL}}</buildUrl>
-									</buildInfo>
-									<licenses>
-										<autoDiscover>false</autoDiscover>
-										<includePublishedArtifacts>false</includePublishedArtifacts>
-										<runChecks>false</runChecks>
-										<scopes>compile,runtime</scopes>
-									</licenses>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 </project>
